[gd_scene load_steps=12 format=3 uid="uid://dfu8csu03hvgy"]

[ext_resource type="Texture2D" uid="uid://do01si3a4lx5p" path="res://assets/Skybox/kloofendal_48d_partly_cloudy_puresky_2k.hdr" id="2_2wwxx"]
[ext_resource type="Script" uid="uid://b2xlmbeob4880" path="res://script/player.gd" id="3_3amdw"]
[ext_resource type="PackedScene" uid="uid://cigneymlaf4xu" path="res://scene/Patient.tscn" id="4_2wwxx"]
[ext_resource type="PackedScene" uid="uid://bwak085b1d467" path="res://scene/hospital.tscn" id="4_brvut"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_lquwl"]
panorama = ExtResource("2_2wwxx")

[sub_resource type="Sky" id="Sky_7mycd"]
sky_material = SubResource("PanoramaSkyMaterial_lquwl")

[sub_resource type="Environment" id="Environment_272bh"]
background_mode = 2
sky = SubResource("Sky_7mycd")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r34rm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2wwxx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2wwxx"]
height = 1.2

[sub_resource type="BoxShape3D" id="BoxShape3D_2wwxx"]
size = Vector3(0.5918579, 2.4174805, 1.986455)

[node name="world" type="Node3D"]

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_272bh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.5362015, 0, 0.04378605)
script = ExtResource("3_3amdw")

[node name="standing_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_r34rm")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player/standing_collision_shape"]
mesh = SubResource("CapsuleMesh_2wwxx")
skeleton = NodePath("../..")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("CapsuleShape3D_2wwxx")
disabled = true

[node name="head" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="player/head"]

[node name="RayCast3D" type="RayCast3D" parent="player"]
target_position = Vector3(0, 2, 0)

[node name="InteractArea" type="Area3D" parent="player"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="player/InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, -1)
shape = SubResource("BoxShape3D_2wwxx")
debug_color = Color(0, 0, 0, 1)

[node name="Patient" parent="." instance=ExtResource("4_2wwxx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.852522, 0, 4.0907516)

[node name="hospital" parent="." instance=ExtResource("4_brvut")]
